--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "@vitejs/plugin-vue": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.0"
