fix: highlight code

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@modelcontextprotocol/sdk": "^1.12.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "highlight.js": "^11.11.1",
     "pinia": "^2.1.0",
     "vue": "^3.4.0",
     "vue-router": "^4.2.0"
