--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@modelcontextprotocol/sdk": "^1.12.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "highlight.js": "^11.11.1",
     "pinia": "^2.1.0",
     "vue": "^3.4.0",
     "vue-router": "^4.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "@vitejs/plugin-vue": "^5.0.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "vue-tsc": "^1.8.0"
