--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.29.0",
     "@modelcontextprotocol/sdk": "^1.12.1",
+    "@monaco-editor/loader": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "highlight.js": "^11.11.1",
+    "monaco-editor": "^0.52.2",
     "pinia": "^2.1.0",
     "vue": "^3.4.0",
     "vue-router": "^4.2.0"
